# ros_brain

./: README.md
genome/: test.mng
ros_brain/: CMakeLists.txt  package.xml
ros_brain/src/: brain.cpp  pseudo_sensor.cpp
ros_brain/srv/: TriggerBrain.srv
src/ros_brain/: CMakeLists.txt  package.xml
src/ros_brain/launch/: workshop3.2_bringup.launch
src/ros_brain/scripts/: test.py  turtle_controller.py
src/ros_brain/src/: brain_server.cpp
